// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/git-porcelain setConfig deletes values from local git-config 1`] = `
"[core]
repositoryformatversion = 0
filemode = false
bare = false
logallrefupdates = true
symlinks = false
ignorecase = true

[user]
email = john.doe@example.com

[remote \\"origin\\"]
fetch = +refs/heads/*:refs/remotes/origin/*
url = https://github.com/exampleUser/exampleProj
"
`;

exports[`containers/git-porcelain setConfig updates values to local git-config 1`] = `
"[core]
repositoryformatversion = 0
filemode = false
bare = false
logallrefupdates = true
symlinks = false
ignorecase = true

[user]
email = john.doe@example.com
name = John Smith

[remote \\"origin\\"]
fetch = +refs/heads/*:refs/remotes/origin/*
url = https://github.com/exampleUser/exampleProj
"
`;
